fixed score alignment

--- a/web_server/src/static/style.css
+++ b/web_server/src/static/style.css
@@ -293,6 +293,10 @@ button:hover {
     justify-content: space-between;
 }
 
+.timestamp-score {
+    margin-inline: 6px;
+}
+
 .notification {
     position: absolute;
     bottom: 100%;
